# consilium

./: .gitignore  README.md  pyproject.toml  requirements.txt
consilium/: __init__.py  __main__.py  cli.py  config.py
consilium/agents/: __init__.py  base.py  registry.py
consilium/agents/investors/: __init__.py
consilium/agents/specialists/: __init__.py
consilium/analysis/: __init__.py  consensus.py  orchestrator.py  reporter.py
consilium/ask/: __init__.py  models.py  orchestrator.py  ticker_extractor.py
consilium/backtesting/: __init__.py  engine.py  metrics.py  models.py  repository.py  signal_generator.py  simulator.py  strategies.py
consilium/core/: __init__.py  enums.py  exceptions.py  models.py  portfolio_models.py
consilium/data/: __init__.py  cache.py  historical.py  provider.py  universes.py  yahoo.py
consilium/db/: __init__.py  ask_repository.py  connection.py  migrations.py  portfolio_repository.py  repository.py
consilium/llm/: __init__.py  ask_prompts.py  client.py  cost_estimator.py  prompts.py  schemas.py
consilium/output/: __init__.py  ask_formatter.py  backtest_formatter.py  comparison.py  cost_display.py  exporters.py  formatters.py  portfolio_formatter.py
consilium/portfolio/: __init__.py  analyzer.py  importer.py
consilium/prompts/investors/: ackman.yaml  buffett.yaml  burry.yaml  damodaran.yaml  druckenmiller.yaml  fisher.yaml  graham.yaml  jhunjhunwala.yaml  lynch.yaml  munger.yaml  pabrai.yaml  simons.yaml  wood.yaml
consilium/prompts/specialists/: fundamentals.yaml  political.yaml  portfolio.yaml  risk.yaml  sentiment.yaml  technicals.yaml  valuation.yaml
tests/: __init__.py  conftest.py  test_consensus.py  test_models.py
